# find-tfbs

./: .gitignore  Cargo.toml  README.md  all_chr.py  build_static.sh  run_tests.sh  select_large_count_differences.py  unique_peaks.sh
src/: bed.rs  haplotype.rs  main.rs  pattern.rs  range.rs  types.rs  util.rs
test_data/: ACGT.thr  genotypes.bcf  genotypes.bcf.csi  genotypes2.bcf  genotypes2.bcf.csi  pwm_definitions.txt  reference_genome.fa  reference_genome.fa.fai  regions1.bed  regions2.bed  samples
