[package]
name = "vcf_pwm"
version = "0.1.0"
authors = ["Sebastian Meric de Bellefon <sebastian.meric.de.bellefon@umontreal.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.28.2"
rust-htslib = "0.24.0"
rayon = "1.1.0"
bgzip = "0.0.3"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false