[package]
name = "find-tfbs"
version = "1.0.0"
authors = ["Sebastian Meric de Bellefon <sebastian.meric.de.bellefon@umontreal.ca>"]
edition = "2018"

[dependencies]
bio = "0.28.2"
rust-htslib = "0.26.1"
bgzip = "0.0.3"
clap = "2.33.0"
which = "2.0.1"
subprocess = "0.1.18"
multiqueue = "0.3.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true
